# zebra

./: .gitignore  ChangeLog  INSTALL  Imakefile  Makefile.am  Makefile.in  Makefile.ini  README.libraries  Z5_conversion.html  configure  configure.in  mkinstalldirs  version_update  zebra-to-git
Makedepend/: Imakefile  Makefile.ini  def.h  main.c  parse.c
config/: Imakefile  Imakefile.imake  Project.tmpl  RDSSLib.rules  Template.c  graphdev.h.template  site-def.h.template  sun.h.template  titan.h.template
config/cf/: Imake.rules  Imake.tmpl  Imakefile  Makefile.ini  hp.cf  imake.c  imakemdep.h  linux.cf  lnxLib.rules  lnxLib.tmpl  lnxdoc.rules  osf1.cf  sgi.cf  sun.cf  sunLib.tmpl  x386.cf  xf86.rules  xf86.tmpl  xfree86.cf
config/imake/: .cvsignore  Imakefile  imake.c  imakemdep.h
config/project/: Build.tmpl  Docs.rules  Imakefile  Project.tmpl  README  README.binaries  Zeb-Imake.doc  Zeb.rules  Zebra-Imake.doc  Zebra.rules  appendix.doc  config-defaults.h  config-ingest.h  config.h-v4.0  config.h.dist  config.h.iss  config.h.linux  config.h.solaris  site.def  version.h
config/scripts/: Imakefile  bsdinst.sh  zmkmf.cpp
config/util/: .cvsignore  Imakefile  bsdinst.sh  lndir.sh  zmkmf.cpp
graphics/: .gitignore  Imakefile  Makefile.am  Makefile.in  aspect.c  clip.c  color.c  color.h  configure  configure.in  control.c  dev_4010.c  dev_4107.c  dev_comtal.c  dev_comtal_tab.c  dev_ln03.c  dev_null.c  dev_pixrect.c  dev_ps.c  dev_psc.c  dev_ramtek.c  dev_sunview.c  dev_tek.c  dev_x11.c  dev_xtitan.c  dev_xwin.c  device.c  device.h  graphics.h  gt.c  gt4107.c  image.c  image.h  messages.c  oplist.c  oplist.h  ov_test.c  overlay.c  overlay.h  param.h  (+13 more)
imake/: Imake.tmpl  Imakefile  Makefile.ini  X386Conf.tmpl  hp.cf  imake.c  imakemdep.h  lnuxLib.rules  sgi.cf  sgiLib.rules  sgiLib.tmpl  site.def  sun.cf  sv4Lib.rules  sv4Lib.tmpl  x386.cf  xf86_vers.def
map/: cart.map  cops91.map  gale.map  llwas.map  mist.map  newharp.map  oldgale.map  oldharp.map  space.map  stormfest.map  usa.map  warm.map  wisp91.map
scripts/: Dockerfile.ubuntu  Makefile  build_selected_links  do_new_iop  do_startbutton  new_iop  newdisplay  platwatch  runc  snap_win  start_cam  startbutton  startup
src/: Imakefile
src/EventLogger/: .cvsignore  EventLogger.ad  EventLogger.c  Imakefile
src/GRIBdump/: .cvsignore  GRIBdump.c  Imakefile
src/ListMaker/: .cvsignore  .gitignore  Imakefile  ListMaker.cc
src/Optimizer/: .cvsignore  Bitmaps.c  Boundary.c  CommandWidget.c  GenScan.c  Imakefile  Instructions  LeftRightButtons.c  MainWidget.c  Makefile.cpp  Optimizer.ad  Optimizer.c  Optimizer.state  RadarWidget.c  ScanOptions.c  SendWidget.c  bitmaps.h  cape  cinde  config_format.doc  globals.h  keywords.h  precip98  prototypes.h  radar.h
src/Sound/: .gitignore  Imakefile  Sound.c
src/dm/: .cvsignore  DialBox.c  DisplayMgr.ad  Imakefile  Makefile.cpp  dm.c  dm.h  dm.state  dm.widgets  dm_Mosaic.c  dm_cmds.h  dm_color.c  dm_config.c  dm_help.c  dm_message.c  dm_pd.c  dm_pick.c  dm_process.c  dm_process.h  dm_time.c  dm_ui.c  dm_vars.h  make-lf
src/ds/: .cvsignore  .gitignore  Appl.c  Appl.h  BoundaryFile.h  C_Appl.c  ConvertDObj.c  DFA_Appl.c  DFA_Boundary.c  DFA_GRIB.c  DFA_Grads.c  DFA_HDF.c  DFA_NetCDF.c  DFA_None.c  DFA_OpaqueFile.c  DFA_Raster.c  DFA_SweepFile.cc  DFA_Zeb.c  DFA_Zebra.c  DFA_ncutil.c  Daemon.c  Daemon.state  DataAttr.c  DataChunk.c  DataChunk.h  DataChunkP.h  DataFileAccess.c  DataFiles.cc  DataFiles.h  DataFormat.c  DataFormat.h  DataStore.h  DataTypes.c  DataTypes.h  DataTypes.x  DataTypes_xdr.c  DerivNode.cc  DerivNode.h  DerivTable.cc  DerivTable.h  (+108 more)
src/dscopy/: .cvsignore  Imakefile  dscopy.c
src/dsdelete/: .gitignore  Imakefile  dsdelete.c
src/dsdump/: .gitignore  Imakefile  dsdump.c
src/dsdwidget/: .cvsignore  Imakefile  dsdwidget.ad  dsdwidget.c  xncdump.c
src/dsmanage/: .cvsignore  .gitignore  BoolKludge.h  DLoad.cc  DataDir.cc  DataDir.h  Dialog.cc  Dialog.h  Examiner.cc  Exceptions.h  FreeSpace.cc  Imakefile  Index.cc  Index.h  LoadData.cc  MainWindow.cc  MaybeCString.h  STable.h  StatusWin.cc  StatusWin.h  TBCleanup.cc  Tape.cc  Tape.h  TapeIndex.cc  ZTime.h  container.h  dsFile.cc  dsFile.h  dsPlatform.cc  dsPlatform.h  dsmWindows.cc  dsmWindows.h  dsmanage.ad  dsmanage.cc  dsmanage.h  fcontainer.h  plcontainer.h
src/dsnotice/: .cvsignore  Imakefile  README  dsnotice.c
src/dsprint/: .gitignore  Imakefile  dsprint.c
src/dsrescan/: .cvsignore  Imakefile  dsrescan.c
src/etc/: FieldDefs  Imakefile  startzeb.sh
src/fccclock/: .gitignore  FccClock.ad  Imakefile  fccclock.c
src/gettime/: .cvsignore  Imakefile  gettime.c
src/gp/: .cvsignore  .gitignore  ActiveArea.c  ActiveArea.h  AltControl.c  AnnotWidget.c  Annotate.c  AxisControl.c  AxisControl.h  ColorTable.c  ConstAltPlot.c  Contour.c  Contour.h  ContourP.h  DataMenu.c  DrawText.c  DrawText.h  EventQueue.c  EventQueue.h  FakeFloat.hh  FieldMenu.c  FieldMenu.h  FieldSelect.cc  FillContour.c  (+75 more)
ui/: .cvsignore  Imakefile  Makefile.am  Makefile.in  RdssMenu.c  RdssMenu.h  RdssMenuP.h  SMEMENUCHANGES  SimpleMenu.c  SmeMenu.c  SmeMenu.h  SmeMenuP.h  configure  configure.in  make-lf  submenu.h  tty_cray.c  ui.c  ui.h  ui.state  ui_OutHook.c  ui_bootstrap.c  ui_cmds.c  ui_commands  ui_commands.h  ui_cstack.c  ui_cstack.h  ui_ctable.c  ui_date.c  ui_date.h  ui_error.c  ui_error.h  ui_expr.c  ui_expr.h  ui_function.c  ui_globals.c  ui_globals.h  ui_interrupt.c  ui_keys.c  ui_loadfile.h  (+27 more)
ui/LiteClue/: .cvsignore  Imakefile  LiteClue.c  LiteClue.h  LiteClue.html  LiteClue.ps  LiteClueP.h  LiteClueTest.c  Makefile.am  Makefile.in  README  build.com  configure  configure.in
ui/Tabs/: Gcs.c  Imakefile  Makefile.linux  Makefile.solaris  Makefile.sunos  Tabdemo  Tabs.Readme  Tabs.c  Tabs.h  Tabs.man  TabsP.h  tabdemo.c
util/: .gitignore  Imakefile  Makefile.am  Makefile.in  batch.c  bfile.c  bio.c  configure  configure.in  cpanic.c  disk.c  fixdir.c  getgnum.c  log_time.c  met_formulas.c  met_formulas.h  netdisk.h  ntdsk_client.c  parsetime.c  rtape_lib.c  sprintrmt.c  strcpyUC.c  swap4.c  tcpip.c  vm.c
(+1237 files in other folders)
