# Process this file with autoconf to produce a configure script.
AC_INIT(rdssgraphics, [20020827], rdp-support@atd.ucar.edu)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([control.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# X is required
AC_PATH_X
if test "$no_x" = "yes"; then
	echo "X11 was not found; the RDSS Graphics library will not be built."
else
	LIBS="$LIBS -lX11"
fi
AM_CONDITIONAL(WITH_X, [test x$no_x = x])

#
# Add to LDFLAGS and INCLUDES if X files are not in locations
# searched by default.
#
if test x$x_libraries != x; then 
	LDFLAGS="$LDFLAGS -L$x_libraries"
fi

if test x$x_includes != x; then 
	INCLUDES="$INCLUDES -I$x_includes"
fi

# Checks for libraries.
AC_CHECK_LIB([m], [pow], ,
	[echo "Cannot find math library"; exit 1])
AC_CHECK_LIB([termcap], [tgetstr], ,
	[echo "Cannot find termcap library"; exit 1])
# Link to libnsl and libsocket if we can find them (i.e., on Solaris systems),
# otherwise we probably get the necessary stuff from libc (i.e., under Linux)
AC_CHECK_LIB([nsl], [gethostbyname])
AC_CHECK_LIB([socket], [socket])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h sys/file.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset strchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
