# Process this file with autoconf to produce a configure script.
AC_INIT(LiteClue, [20020827], rdp-support@atd.ucar.edu)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([LiteClue.c])

# Checks for programs.
AC_PROG_CC

#
# X is required
#
LIBS="-lXt -lX11 $LIBS"
AC_PATH_X

AM_CONDITIONAL(WITH_X, [test x$no_x = x])

#
# Add to LDFLAGS and INCLUDES if X files are not in locations
# searched by default.
#
if test x$x_libraries != x; then 
	LDFLAGS="$LDFLAGS -L$x_libraries"
fi

if test x$x_includes != x; then 
	INCLUDES="$INCLUDES -I$x_includes"
fi

#
# HPUX may not have libXaw, libXext, and libXmu, so check explicitly and
# complain if one is missing
#
AC_CHECK_LIB([Xmu], [XmuMakeAtom], ,
	[echo "Cannot find X11 library libXmu"; exit 1])
AC_CHECK_LIB([Xext], [XextCreateExtension], ,
	[echo "Cannot find X11 extension library libXext"; exit 1])
AC_CHECK_LIB([Xaw], [XawInitializeWidgetSet], ,
	[echo "Cannot find Athena widget library libXaw"; exit 1])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS([memset strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
